force-app/main/default/objects/Lab__c/fields/Other_Test__c.field-meta.xml
<CustomField>
    <fullName>Other_Test__c</fullName>
    <label>Other Test</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AEC</fullName>
                <default>true</default>
                <label>AEC</label>
            </value>
            <value>
                <fullName>AMH</fullName>
            </value>
            <value>
                <fullName>ANA-17 Profile</fullName>
            </value>
            <value>
                <fullName>Anti CCP</fullName>
            </value>
            <value>
                <fullName>AP TT</fullName>
            </value>
            <value>
                <fullName>ASO Titre (Antistreptolysion)</fullName>
            </value>
            <value>
                <fullName>Beta HCG</fullName>
            </value>
            <value>
                <fullName>Biopsy Small</fullName>
            </value>
            <value>
                <fullName>Blood Coagulation Profile</fullName>
            </value>
            <value>
                <fullName>Blood Group</fullName>
            </value>
            <value>
                <fullName>Blood Sugar (RBS Blood Glucose)</fullName>
            </value>
            <value>
                <fullName>Blood Urea</fullName>
            </value>
            <value>
                <fullName>BT / CT</fullName>
            </value>
            <value>
                <fullName>CBC</fullName>
            </value>
            <value>
                <fullName>CPK MB</fullName>
            </value>
            <value>
                <fullName>CRP</fullName>
            </value>
            <value>
                <fullName>CRP (Quantitative)</fullName>
            </value>
            <value>
                <fullName>Dengue NS1 Antibody</fullName>
            </value>
            <value>
                <fullName>E.S.R.</fullName>
            </value>
            <value>
                <fullName>ECG</fullName>
            </value>
            <value>
                <fullName>FSH</fullName>
            </value>
            <value>
                <fullName>GTT</fullName>
            </value>
            <value>
                <fullName>Haemoglobin HB</fullName>
            </value>
            <value>
                <fullName>HbA1c</fullName>
            </value>
            <value>
                <fullName>HbsAg</fullName>
            </value>
            <value>
                <fullName>HCV</fullName>
            </value>
            <value>
                <fullName>HDL Cholestrol</fullName>
            </value>
            <value>
                <fullName>HIV</fullName>
            </value>
            <value>
                <fullName>HLA B27</fullName>
            </value>
            <value>
                <fullName>ICT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>