force-app/main/default/objects/Lab__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Labs</relationshipLabel>
    <relationshipName>Labs</relationshipName>
    <type>Lookup</type>
</CustomField>