force-app/main/default/objects/Lab__c/fields/Patient_Type__c.field-meta.xml
<CustomField>
    <fullName>Patient_Type__c</fullName>
    <label>Patient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IPD</fullName>
            </value>
            <value>
                <fullName>OPD</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>