force-app/main/default/objects/Lab__c/fields/X_Ray_Type__c.field-meta.xml
<CustomField>
    <fullName>X_Ray_Type__c</fullName>
    <label>X-Ray  Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Test_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CX Spine</fullName>
            </value>
            <value>
                <fullName>D-L Spine</fullName>
            </value>
            <value>
                <fullName>L-S Spine</fullName>
            </value>
            <value>
                <fullName>PBH</fullName>
            </value>
            <value>
                <fullName>Chest AP</fullName>
            </value>
            <value>
                <fullName>Shoulder</fullName>
            </value>
            <value>
                <fullName>Arm</fullName>
            </value>
            <value>
                <fullName>Elbow</fullName>
            </value>
            <value>
                <fullName>Fore Arm</fullName>
            </value>
            <value>
                <fullName>Wrist</fullName>
            </value>
            <value>
                <fullName>Hand</fullName>
            </value>
            <value>
                <fullName>Skull</fullName>
            </value>
            <value>
                <fullName>Hip</fullName>
            </value>
            <value>
                <fullName>Thigh</fullName>
            </value>
            <value>
                <fullName>Knee</fullName>
            </value>
            <value>
                <fullName>Leg</fullName>
            </value>
            <value>
                <fullName>Ankle</fullName>
            </value>
            <value>
                <fullName>Foot</fullName>
            </value>
            <value>
                <fullName>Heel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>